# ai-molecule-screening-platform

./: .gitignore  COMPLIANCE.md  DATA_SOURCES.md  DISCLAIMER.md  FULL_SOURCE_INVENTORY.md  INSTALL.md  LICENSE  OPEN_SOURCE_MANIFEST.md  README.md  REPRODUCIBLE_DEMO.md  THIRD_PARTY_DATA.md  THIRD_PARTY_NOTICES.md  VALIDATION.md  WEB_DEMO_README.md  health_check.py  pyproject.toml  pytest.ini  requirements-optional.txt  requirements-runtime.txt  requirements.lock.txt  requirements.txt  start_web.sh
ai_mol_loop/: FRONTEND_CLI_INTEGRATION_GUIDE.md  README.md  ai-mol-loop  ai_mol_loop.py  external_scores_template.csv
ai_mol_loop/tests/: test_stage3_agentic_context.py  (+3 more)
assets/: ASSET_MANIFEST.json  README.md
docs/: 2026-07-17-four-level-cli-1000x10000-design.md  WORK_LOG_2026-05-23_to_2026-05-25.md
examples/: ca2_candidates.csv  flu_candidates.csv  fxa_candidates.csv  hiv_candidates.csv  integrase_candidates.csv
scientific_validation/: __init__.py
scoring/: COVID案例.md  HIV案例.md  README.md  __init__.py  asset_integrity.py  asset_paths.py  dock_rerank.py  l2_bindingdb.py  pipeline_router.py  receptor_registry.json  scoring.py  target_resolver.py  target_seq_embedding.py  流感案例.md
scripts/: build_product_delivery.py  build_source_release.py  download_ai_molecule_repos_api.py  download_public_data.py  frontend_closed_loop_e2e.py  verify_assets.py
tests/: test_four_level_cli_contract.py  test_four_level_dataset.py  test_four_level_metrics.py  test_four_level_run_verifier.py  test_public_data_downloader.py  test_stage4_web_recovery.py
webapp/: server.py
(+172 files in other folders)
